--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "5.0.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3"
